--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
       "predictiveBackGestureEnabled": false,
       "package": "com.anonymous.projectxapp",
       "permissions": [
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"  
       ]
     },
     "web": {
@@ -52,6 +53,7 @@
       [
         "expo-audio",
         {
+          "recordAudioAndroid":true,
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone to record audio."
         }
       ]
