--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/montserrat": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
@@ -24,7 +25,9 @@
     "@reduxjs/toolkit": "^2.11.2",
     "expo": "~54.0.23",
     "expo-audio": "~1.1.1",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
